--- a/src/features/swipe/map/components/RestaurantInfo.module.scss
+++ b/src/features/swipe/map/components/RestaurantInfo.module.scss
@@ -2,10 +2,9 @@
   height: 100%;
   width: 100%;
   max-width: 400px;
-  text-align: left;
   background-color: #fff;
   overflow: scroll;
-  z-index: 2;
+  z-index: 2000;
   position: absolute;
   top: 0;
   left: 0;
@@ -35,10 +34,8 @@
     position: absolute;
     right: 15px;
     top: 10px;
-    font-size: 20px;
     color: #fff;
-    background-color: #000;
-    border-radius: 50%;
+    cursor: pointer;
     width: 30px;
     height: 30px;
 
@@ -60,6 +57,8 @@
   }
 
   .bottomContainer {
+    text-align: left;
+
     p,
     a {
       color: #000;
